2013-01-15  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/etex.am, etrip.test: Enable parallel-tests.

2012-12-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/etex.am (etex_version.h): Enable silent rules.

2012-08-02  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* etex.ch, etex_version.h: Version 2.5.
	Better tracing of font definitions, reported by
	Bruno Le Floch <blflatex@@gmail.com>, Jul 2012.
	* etrip/etrip.tex: Test the additional tracing.

2012-07-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/etex.am: Distribute etex_version.h.

2012-07-15  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* etexextra.c: Must #define DLLPROC before reading etexd.h.

2012-06-30  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* etexextra.c [W32TeX]: #define DLLPROC for etex.dll.

2012-05-11  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* etex.ch: Version 2.4, dated May 11, 2012.
	* etrip/etrip.tex, etrip/etripin.log, etrip/etrip.log,
	etrip/etrip.fot, etrip/etrip.typ, etrip/etrip.diffs: Adapted.

2012-04-11  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* etex.ch: Fixed a typo in TeX text.

	* INSTALL, README: Removed these obsolete files.
	* am/etex.am (EXTRA_DIST): Removed INSTALL and README.

2011-09-30  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* wprob.test: New shell script to test for uninitialized line.
	* am/etex.am: Add the new test.	

2011-09-30  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* etex.ch: Slightly reformulate printing of current line.

2011-04-07  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* etex.ch: Version 2.3, dated April 7, 2011.
	* etrip/etrip.tex, etrip/etripin.log, etrip/etrip.log,
	etrip/etrip.fot, etrip/etrip.typ, etrip/etrip.diffs: Adapted.

2011-04-03  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* etex.ch: Remove  remove_end_M and insert_end_M (now unused).

2011-03-31  Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>

	* etex.ch: TeX formatting.

2011-03-30  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* etex.ch: Further reduce e-pTeX interferences.
