@@ -1,3 +1,8 @@
+2013-01-24  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* wprob.test: Avoid spurious failure of parallel-tests.
+	* am/etex.am: Renamed wprob.{tex,log} => ewprob.{tex,log}.
+
 2013-01-15  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* am/etex.am, etrip.test: Enable parallel-tests.
